Wed Feb 24 08:01:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/NonBlocking_Conn_Test.cpp:
          Unicode fixes

        * tests/Atomic_Op_Test.cpp:
          Calculate how long each test takes and print this to the log

Wed Feb 24 02:48:37 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/config-sunos5.5.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Tue Feb 23 19:45:39 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/OS_Test.cpp: Added tests for floorl() and ceill().  Thanks
          to Olivier Langlois <olivier at olivierlanglois dot net> for
          this fix.

Tue Feb 23 19:43:36 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * configure.ac: Added a check for ACE_CHECK_LACKS_FUNCS(floor ceil
          floorl ceill).  Thanks to Olivier Langlois <olivier at
          olivierlanglois dot net> for this fix.

Tue Feb 23 15:15:00 UTC 2010  Simon Massey  <sma at prismtech dot com>

        * ace/config-lynxos.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Tue Feb 23 08:59:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.4.h:
          VxWorks lacks floorl and ceill

Mon Feb 22 20:01:54 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Time_Value.{h,cpp}: Applied some patches from Olivier Langlois
          <olivier at olivierlanglois dot net> to fix some warnings.

Mon Feb 22 19:57:02 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Thread_Mutex.inl (ACE_Thread_Mutex::lock): Added a non-const
          lock() method.  Thanks to Phil for suggesting this.

Mon Feb 22 18:08:20 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_Recursive_Thread_Mutex.cpp (ACE_Condition): Fixed
          a stray occurrence of the mutex() accessor that should be
          lock().  Thanks to Phil Mesnier for reporting this.
