@@ -1,3 +1,8 @@
+Wed Feb 24 08:41:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-hpux-11.00.h:
+          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL
+
 Wed Feb 24 08:01:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/NonBlocking_Conn_Test.cpp:
